<resources>
    <string name="app_name">Image Reader</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="signout">Signout</string>
    <string name="welcome">Welcome  </string>
    <string name="add_image">Add Image</string>
    <string name="history">History</string>
    <string name="show_text">Show Text</string>
    <string name="add_another_image">Add Another Image</string>
</resources>